--- a/alumni.html
+++ b/alumni.html
@@ -78,37 +78,37 @@
       </div>
     <div class = "row">
         <div class="col-sm-4">
-        <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/ivyk.jpg" alt="">
-            <h4>Ivy Kosater</h4>
-            <p class="text-muted">Bioinformatics Programmer at Columbia University Medical Center</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="https://github.com/ivykos">
-                <i class="fab fa-github"></i>
-                </a>
-            </li>
-            </ul>
-        </div>
+          <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/ivyk.jpg" alt="">
+              <h4>Ivy Kosater</h4>
+              <p class="text-muted">Bioinformatics Programmer at Columbia University Medical Center</p>
+              <ul class="list-inline social-buttons">
+                <li class="list-inline-item">
+                  <a href="https://github.com/ivykos">
+                  <i class="fab fa-github"></i>
+                  </a>
+                </li>
+              </ul>
+          </div>
         </div>
         <div class="col-sm-4">
-        <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/ak.jpg" alt="">
-            <h4>Adam Karami</h4>
-            <p class="text-muted">Head of Bioinformatics at Fels Cancer Institute</p>
-            <ul class="list-inline social-buttons">
-            <li class="list-inline-item">
-                <a href="https://github.com/alkarami">
-                <i class="fab fa-github"></i>
-                </a>
-            </li>
-            <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/adam-karami-69167195/">
-                <i class="fab fa-linkedin-in"></i>
-                </a>
-            </li>
-            </ul>
-        </div>
+          <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/ak.jpg" alt="">
+              <h4>Adam Karami</h4>
+              <p class="text-muted">Head of Bioinformatics at Fels Cancer Institute</p>
+              <ul class="list-inline social-buttons">
+                <li class="list-inline-item">
+                    <a href="https://github.com/alkarami">
+                    <i class="fab fa-github"></i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="https://www.linkedin.com/in/adam-karami-69167195/">
+                    <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </li>
+              </ul>
+          </div>
         </div>
         <div class="col-sm-4">
             <div class="team-member">
@@ -128,9 +128,9 @@
                 </li>
                 </ul>
             </div>
-            </div>
-        
+          </div>  
     </div>
+
     <div class = "row">
         <div class="col-sm-4">
         <div class="team-member">
@@ -151,6 +151,7 @@
             </ul>
         </div>
         </div>
+
         <div class="col-sm-4">
         <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/qn.jpeg" alt="">
@@ -169,8 +170,97 @@
             </li>
             </ul>
         </div>
+      </div>
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/td.jpg" alt="">
+            <h4>Toshan Doodnauth</h4>
+            <p class="text-muted">Associate Researcher Carnevale Lab</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://github.com/tuk76325">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/toshan-doodnauth-250b03224/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </div>
+      </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/aa.jpg" alt="">
+              <h4>Aurelio Aquila</h4>
+              <p class="text-muted"></p>
+              <ul class="list-inline social-buttons">
+                <li class="list-inline-item">
+                  <a href="https://github.com/tul10088">
+                    <i class="fab fa-github"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://www.linkedin.com/in/aurelio-aquila-207211249">
+                    <i class="fab fa-linkedin-in"> </i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/jtn.jpg" alt="">
+              <h4>Jon Tanner Nelson</h4>
+              <p class="text-muted"></p>
+              <ul class="list-inline social-buttons">
+                <li class="list-inline-item">
+                  <a href="https://github.com/J-T-Nelson">
+                    <i class="fab fa-github"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://www.linkedin.com/in/jon-tanner-nelson/">
+                    <i class="fab fa-linkedin-in"> </i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/phy.jpg" alt="">
+              <h4>Po'Hsin Yu</h4>
+              <p class="text-muted"></p>
+              <ul class="list-inline social-buttons">
+                <li class="list-inline-item">
+                  <a href="https://www.linkedin.com/in/po-hsin-yu">
+                    <i class="fab fa-linkedin-in"> </i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="team-member">
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/hs.jpeg" alt="">
+              <h4>Harris Syed</h4>
+              <p class="text-muted"></p>
+            </div>
+          </div>
+          </div>
+        </div>
+      </section>
 
   <!-- Footer -->
   <footer class="footer">
