--- a/index.html
+++ b/index.html
@@ -212,68 +212,73 @@
               <th>Time</th>
             </tr>
             <tr>
-              <td>Thursday, Sept. 8th</td>
+              <td>Thursday, Aug. 31st</td>
               <td>Welcome! in SERC 604 </td> 
               <td>5pm</td>
             </tr>
             <tr>
-              <td>Thursday, Sept. 15th</td>
-              <td> Open Coding </td> 
+              <td>Thursday, Sept. 7th</td>
+              <td>Open Coding </td> 
               <td>4pm</td>
             </tr>
             <tr>
-              <td>Thursday, Sept. 22nd</td>
-              <td> Open Coding </td> 
+              <td>Thursday, Sept. 14th</td>
+              <td>Open Coding </td> 
               <td>4pm</td>
             </tr>
             <tr>
-              <td>Thursday, Sept. 29th</td>
-              <td> Dr. Craig Stanley, VP of Data Strategy and Technical Operation, IND 5pm </td> 
+              <td>Thursday, Sept. 21st</td>
+              <td>Open Coding </td> 
               <td>4pm</td>
             </tr>
             <tr>
-              <td>Thursday, Oct. 6th</td>
-              <td> Fox Chase Cancer Center Zoom Presentation  </td> 
+              <td>Thursday, Sept. 28th</td>
+              <td>Open Coding</td> 
               <td>4pm</td>
             </tr>
             <tr>
-              <td>Thursday, Oct. 13th</td>
-              <td> Open Coding & Open Samsung Demonstration </td> 
+              <td>Thursday, Oct. 5th</td>
+              <td>Open Coding </td> 
               <td>4pm</td>
             </tr>
             <tr>
-              <td>Thursday, Oct. 20th</td>
-              <td> Open Coding </td> 
+              <td>Thursday, Oct. 12th</td>
+              <td>Open Coding </td> 
               <td>4pm</td>
             </tr>
             <tr>
-              <td>Thursday, Oct. 27th</td>
-              <td> Open Coding </td> 
+              <td>Thursday, Oct. 19th</td>
+              <td>Open Coding </td> 
               <td>4pm</td>
             </tr>
             <tr>
-              <td>Thursday, Nov. 3rd</td>
-              <td> Open Coding & FCCC Project Discussion </td> 
+              <td>Thursday, Oct. 26th</td>
+              <td>Open Coding</td> 
               <td>4pm</td>
             </tr>
             <tr>
-              <td>Thursday, Nov. 10th</td>
-              <td> HPC Resources Seminar by Jason Lamanna & Open Coding </td> 
+              <td>Thursday, Nov. 2nd</td>
+              <td>Open Coding </td> 
               <td>4pm</td>
             </tr>
             <tr>
-              <td>Thursday, Nov. 17th</td>
-              <td> RNA-seq Galaxy Pipeline Seminar by Stephen Shank @ FCCC & Open Coding </td> 
+              <td>Thursday, Nov. 9th</td>
+              <td>Open Coding</td> 
               <td>4pm</td>
             </tr>
             <tr>
-              <td>Thursday, Dec. 1st</td>
-              <td> Open Coding </td> 
+              <td>Thursday, Nov. 16th</td>
+              <td>Open Coding </td> 
               <td>4pm</td>
             </tr>
             <tr>
-              <td>Thursday, Dec. 8th</td>
-              <td> Open Coding </td> 
+              <td>Thursday, Nov. 31st</td>
+              <td>Open Coding </td> 
+              <td>4pm</td>
+            </tr>
+            <tr>
+              <td>Thursday, Dec. 7th</td>
+              <td>Open Coding </td> 
               <td>4pm</td>
             </tr>
             </table>
@@ -390,52 +395,24 @@
         </div>
       </div>
       <div class="row">
+        <!-- empty space to center image -->
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/aa.jpg" alt="">
-            <h4>Aurelio Aquila</h4>
-            <p class="text-muted">Business Affairs</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="https://github.com/tul10088">
-                  <i class="fab fa-github"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/aurelio-aquila-207211249">
-                  <i class="fab fa-linkedin-in"> </i>
-                </a>
-              </li>
-            </ul>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/jtn.jpg" alt="">
-            <h4>Jon Tanner Nelson</h4>
-            <p class="text-muted">Training Coordinator</p>
+            <img class="mx-auto rounded-circle" src="img/team/pb.png" alt="">
+            <h4>Phil Baldassari</h4>
+            <p class="text-muted">Business Affairs (Treasurer)</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="https://github.com/J-T-Nelson">
+                <a href="https://github.com/phil-baldassari3">
                   <i class="fab fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/jon-tanner-nelson/">
-                  <i class="fab fa-linkedin-in"> </i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/phy.jpg" alt="">
-            <h4>Po'Hsin Yu</h4>
-            <p class="text-muted">Event Manager</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/po-hsin-yu">
+                <a href="https://www.linkedin.com/in/phil-baldassari-70060b23a/">
                   <i class="fab fa-linkedin-in"> </i>
                 </a>
               </li>
@@ -510,6 +487,11 @@
         </div>
       </div>
       <div class="row">
+        <!-- empty space to center image -->
+        <div class="col-sm-4">
+          <div class="team-member">
+          </div>
+        </div>
         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/as.jpg" alt="">
@@ -528,25 +510,22 @@
             </ul>
           </div>
         </div>
-        <div class="col-sm-4">
-          
-
       </div>
 
       <!-- Team: Alumni -->
-<!--       <div class="row justify-content-center"><a class="btn btn-primary btn-lg text-uppercase" href="alumni.html">Alumni</a></div> -->
+      <div class="row justify-content-center"><a class="btn btn-primary btn-lg text-uppercase" href="alumni.html">Alumni</a></div>
      
       <!-- Team: Faculty -->
       <div class="row">
         <div class="col-12 text-center" style="margin-top: 20px;">
-<!--           <p></p> -->
+          <p></p>
           <h2 class="section-heading text-uppercase">Faculty Advisors</h2>
           <h3 class="section-subheading text-muted"></h3>
           <p> </p>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-12 text-center">
+        <div class="col-sm-6 text-center">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/rk.jpg" alt="">
             <h4>Rob Kulathinal</h4>
@@ -554,7 +533,7 @@
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://www.cst.temple.edu/~robie/bioinform/index.html">
-                  <i class="fab fa-university"></i>
+                  <i class="fab fa-house"></i>
                 </a>
               </li>
               <li class="list-inline-item">
@@ -572,8 +551,8 @@
             <p class="text-muted">vincenzo.carnevale@temple.edu</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="https://vincenzocarnevale.wordpress.com/">
-                  <i class="fab fa-university"></i>
+                <a href="https://carnevalelab.org/">
+                  <i class="fab fa-house"></i>
                 </a>
               </li>
               <li class="list-inline-item">
