--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <tr>
               <td>Thursday, Aug. 31st</td>
               <td>Welcome! in SERC 604 </td> 
-              <td>5pm</td>
+              <td>4pm</td>
             </tr>
             <tr>
               <td>Thursday, Sept. 7th</td>
@@ -652,7 +652,7 @@
           </ul>
         </div>
         <div class="col-md-4">
-          <span class="copyright">Logo designed by D. Pivirotto </span>
+          <span class="copyright">Logo designed by Daniel Pivirotto </span>
         </div>
       </div>
     </div>
