update about section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
       </div>
       <p></p>
       <div class="row text-center">
-        <div class = 'col-md-3'></div>
         <div class="col-md-6">
           <a href = "https://templebioinfo-del5037.slack.com/signup">
             <span class="fa-stack fa-4x">
@@ -112,8 +111,6 @@
           <a class="btn btn-primary btn-md text-uppercase" href="https://templebioinfo-del5037.slack.com/signup">Click here to join our Slack workspace</a>
           <p></p>
         </div>
-      </div>
-      <div class = "row text-center">
         <div class="col-md-6">
           <a href = "https://drive.google.com/drive/u/1/folders/0AB9vccD6QEfPUk9PVA">
             <span class="fa-stack fa-4x">
@@ -122,10 +119,13 @@
             </span>
           </a>
           <h4 class="service-heading">Training</h4>
-          <p class="text-muted">Guided hands-on bioinformatics training at every level of expertise in an open studio format. Learn bioinformatics coding and tools by doing it yourself. We’ll meet you where you’re at and get you started in no time!</p>
+          <p class="text-muted">Guided hands-on bioinformatics training at every level of expertise in an open studio format. Learn bioinformatics coding & tools by doing it yourself. We’ll meet you where you’re at and get you started in no time!</p>
           <a class="btn btn-primary btn-md text-uppercase" href="https://drive.google.com/drive/u/1/folders/0AB9vccD6QEfPUk9PVA">Request access to our Shared Google Drive</a>
           <p></p>
         </div>
+      </div>
+      <div class="row text-center"> <p></p> <p></p><p></p> </div>
+      <div class="row text-center">
         <div class="col-md-6">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
@@ -134,17 +134,14 @@
           <h4 class="service-heading">Preparation</h4>
           <p class="text-muted">Programming interview preparation and drills. Build out your Git portfolio with collaborative bioinformatics projects. Take your programming skills to the next level!</p>
         </div>
-      </div>
-      <div class = "row text-center">
-        <div class = 'col-md-3'></div>
         <div class="col-md-6">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-comments fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Visiting Speakers</h4>
-            <p class="text-muted">Hear and discuss bleeding-edge science with invited speakers from industry and academia. </p>
-          </div>
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-comments fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">Visiting Speakers</h4>
+          <p class="text-muted">Hear and discuss bleeding-edge science with invited speakers from industry and academia. </p>
+        </div>
       </div>
     </div>
   </section>
