Update location in index.html

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <a href = cal.html>
             <h2 class="section-heading text-uppercase">Calendar</h2>
           </a>
-          <h3 class="section-subheading text-muted"> Fall 2022:  Meeting Thursdays in SERC 604 @ 4pm </h3>
+          <h3 class="section-subheading text-muted"> Fall 2023:  Meeting Thursdays in Biology Life Sciences 237 @ 4pm </h3>
         </div>
       </div>
       <div class="row">
