--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/jafc.jpeg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/joe.jfif" alt="">
             <h4>Joseph Campagna</h4>
-            <p class="text-muted">Vice President & X/Twitter Social Media Coordinator ( josephrdcabio@gmail.com )</p>
+            <p class="text-muted">VP + Media Coordinator</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://github.com/quaterniomics">
