--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             <p class="text-muted">robkulathinal@temple.edu</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="https://www.cst.temple.edu/~robie/bioinform/index.html">
+                <a href="https://www.bioinform.org">
                   <i class="fa-solid fa-house"></i>
                 </a>
               </li>
