--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <a href = cal.html>
             <h2 class="section-heading text-uppercase">Calendar</h2>
           </a>
-          <h3 class="section-subheading text-muted"> Fall 2023:  Meeting Thursdays in Biology Life Sciences 237 @ 4pm </h3>
+          <h3 class="section-subheading text-muted"> Spring 2026:  Meeting Thursdays in Biology Life Sciences 237 @ 4pm </h3>
         </div>
       </div>
       <div class="row">
@@ -274,22 +274,22 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/hv.jpg" alt="">
-            <h4>Hannah Verdonk</h4>
+            <img class="mx-auto rounded-circle" src="img/team/stella.menzies.jpg" alt="">
+            <h4>Stella Menzies</h4>
             <p class="text-muted">President</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="https://github.com/hverdonk">
+                <a href="https://github.com">
                   <i class="fab fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/hannahverdonk/">
+                <a href="https://www.linkedin.com/in/stellam/">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://twitter.com/hannahverdonk?s=20">
+                <a href="https://twitter.com/?s=20">
                   <i class="fab fa-x-twitter"></i>
                 </a>
               </li>
@@ -298,22 +298,22 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/joe.jfif" alt="">
-            <h4>Joseph Campagna</h4>
-            <p class="text-muted">VP + Media Coordinator</p>
+            <img class="mx-auto rounded-circle" src="img/team/mackenzie.hampton.jpg" alt="">
+            <h4>Mackenzie Hampton</h4>
+            <p class="text-muted">Vice-President</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="https://github.com/quaterniomics">
+                <a href="https://github.com/">
                   <i class="fab fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/joseph-anthony-campagna-%E4%B9%94%E5%AE%89-a82020107/">
+                <a href="https://www.linkedin.com/in/mackenzie-hampton-b77246303/">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://twitter.com/quaterniomics?s=20">
+                <a href="https://twitter.com/?s=20">
                   <i class="fab fa-x-twitter"></i>
                 </a>
               </li>
@@ -322,12 +322,12 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/nd.png" alt="">
-            <h4>Nathan Duda</h4>
-            <p class="text-muted">University Relations</p>
+            <img class="mx-auto rounded-circle" src="img/team/headshot-placeholder.png" alt="">
+            <h4>Vibha Rao</h4>
+            <p class="text-muted">Marketing and Social Media</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="https://github.com/NathanDuda">
+                <a href="https://github.com/">
                   <i class="fab fa-github"></i>
                 </a>
               </li>
@@ -341,25 +341,7 @@
           <div class="team-member">
           </div>
         </div>
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/pb.png" alt="">
-            <h4>Phil Baldassari</h4>
-            <p class="text-muted">Business Affairs (Treasurer)</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="https://github.com/phil-baldassari3">
-                  <i class="fab fa-github"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/phil-baldassari-70060b23a/">
-                  <i class="fab fa-linkedin-in"> </i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
+
       </div>
 
       <!-- Team: Grads -->
@@ -519,11 +501,6 @@
   <section class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 col-sm-8">
-          <a href="https://cb2.cst.temple.edu/">
-            <img class="img-fluid d-block mx-auto" src="img/logos/cb2.png" alt="">
-          </a>
-        </div>
         <div class="col-md-4 col-sm-8">
           <a href="https://cst.temple.edu/">
             <img class="img-fluid d-block mx-auto" src="img/logos/tu.jpg" alt="">
